--- a/form.html
+++ b/form.html
@@ -62,6 +62,9 @@ input, textarea, select{
   font-size:16px;
   font-weight:bold;
 }
+.submit-btn:disabled{
+  background:#999;
+}
 .photo-btn{
   margin-top:8px;
   width:100%;
@@ -80,6 +83,10 @@ input, textarea, select{
   margin:5px;
 }
 #qr-reader{display:none;margin-top:10px;}
+.status-text{
+  margin-top:10px;
+  font-weight:bold;
+}
 </style>
 </head>
 
@@ -142,15 +149,16 @@ input, textarea, select{
 <input type="file" id="cameraInput" accept="image/*" capture="environment" style="display:none"/>
 <div id="preview"></div>
 
-<button class="submit-btn" onclick="submitWO()">Submit Work Order</button>
+<button id="submitBtn" class="submit-btn" onclick="submitWO()">Submit Work Order</button>
+<div id="status" class="status-text"></div>
 
 </div>
 
 <script>
 /* ==============================
- CONFIG
+ CONFIG (🔴 Web App ตัวจริง)
 ============================== */
-const API_URL = "https://script.google.com/macros/s/AKfycbx7KP3UgkEdBWpJDmXSlQQ1GpDMWCv7jMCEW2rInHQXo6Xvyl9TJtEYTyHzWgntQaR9/exec";
+const API_URL = "https://script.google.com/macros/s/AKfycbzRfWNIS9k7psXzY8Zi_YThivvrvEtzSx4RfV8_GeeRQQ_1yRN3DA6R6E3VDFU5xJAmHQ/exec";
 
 /* ==============================
  NAV
@@ -180,46 +188,43 @@ fetch(API_URL + "?mode=asset")
 ============================== */
 async function loadAssetDetail(assetId){
   if(!assetId){
-    document.getElementById("assetDetail").style.display="none";
+    assetDetail.style.display="none";
     return;
   }
   const r = await fetch(API_URL+"?mode=assetDetail&asset_id="+encodeURIComponent(assetId));
   const a = await r.json();
   if(a.error) return;
 
-  document.getElementById("assetDetail").style.display="block";
-  document.getElementById("assetImage").src = a.image_url || "";
-  document.getElementById("d_name").innerText = a.asset_name;
-  document.getElementById("d_class").innerText = a.asset_class;
-  document.getElementById("d_kw").innerText = a.kw;
-  document.getElementById("d_hp").innerText = a.hp;
-  document.getElementById("d_line").innerText = a.line;
-  document.getElementById("d_location").innerText = a.location;
-  document.getElementById("d_status").innerText = a.status;
+  assetDetail.style.display="block";
+  assetImage.src = a.image_url || "";
+  d_name.innerText = a.asset_name;
+  d_class.innerText = a.asset_class;
+  d_kw.innerText = a.kw;
+  d_hp.innerText = a.hp;
+  d_line.innerText = a.line;
+  d_location.innerText = a.location;
+  d_status.innerText = a.status;
 }
-
-document.getElementById("asset_id").addEventListener("change",function(){
-  loadAssetDetail(this.value);
-});
+asset_id.addEventListener("change",()=>loadAssetDetail(asset_id.value));
 
 /* ==============================
  QR SCAN
 ============================== */
 let qr;
 function openQRScanner(){
-  document.getElementById("qr-reader").style.display="block";
-  document.getElementById("closeQR").style.display="block";
+  qr-reader.style.display="block";
+  closeQR.style.display="block";
   qr = new Html5Qrcode("qr-reader");
   qr.start({facingMode:"environment"},{fps:10,qrbox:250},txt=>{
-    document.getElementById("asset_id").value = txt.trim();
+    asset_id.value = txt.trim();
     loadAssetDetail(txt.trim());
     closeQR();
   });
 }
 function closeQR(){
   if(qr) qr.stop();
-  document.getElementById("qr-reader").style.display="none";
-  document.getElementById("closeQR").style.display="none";
+  qr-reader.style.display="none";
+  closeQR.style.display="none";
 }
 
 /* ==============================
@@ -229,11 +234,14 @@ let images=[];
 const maxPhotos=4;
 
 function takePhoto(){
-  if(images.length>=maxPhotos){alert("ครบ 4 รูปแล้ว");return;}
-  document.getElementById("cameraInput").click();
+  if(images.length>=maxPhotos){
+    alert("ถ่ายได้สูงสุด 4 รูป");
+    return;
+  }
+  cameraInput.click();
 }
 
-document.getElementById("cameraInput").addEventListener("change",()=>{
+cameraInput.addEventListener("change",()=>{
   const file=cameraInput.files[0];
   if(!file) return;
   const r=new FileReader();
@@ -242,7 +250,7 @@ document.getElementById("cameraInput").addEventListener("change",()=>{
     const img=document.createElement("img");
     img.src=r.result;
     preview.appendChild(img);
-    document.getElementById("photo-count").innerText=images.length+" / "+maxPhotos;
+    photo-count.innerText=images.length+" / "+maxPhotos;
   };
   r.readAsDataURL(file);
 });
@@ -251,6 +259,14 @@ document.getElementById("cameraInput").addEventListener("change",()=>{
  SUBMIT
 ============================== */
 async function submitWO(){
+  if(!asset_id.value || !problem.value){
+    alert("กรุณาเลือก Asset และกรอก Problem");
+    return;
+  }
+
+  submitBtn.disabled = true;
+  status.innerText = "⏳ กำลังส่งข้อมูล...";
+
   const payload={
     asset_id:asset_id.value,
     line:line.value,
@@ -262,17 +278,28 @@ async function submitWO(){
     images:images
   };
 
-  const r = await fetch(API_URL,{
-    method:"POST",
-    body:JSON.stringify(payload)
-  });
-  const d = await r.json();
+  try{
+    const r = await fetch(API_URL,{
+      method:"POST",
+      headers:{
+        "Content-Type":"application/json"
+      },
+      body:JSON.stringify(payload)
+    });
+    const d = await r.json();
 
-  if(d.status==="success"){
-    alert("Created "+d.wo_id);
-    location.reload();
-  }else{
-    alert("Error");
+    if(d.status==="success"){
+      alert("✅ Created " + d.wo_id);
+      location.reload();
+    }else{
+      alert("❌ Error: "+(d.message||"Unknown"));
+      submitBtn.disabled=false;
+      status.innerText="";
+    }
+  }catch(err){
+    alert("❌ Network / GAS Error");
+    submitBtn.disabled=false;
+    status.innerText="";
   }
 }
 </script>
