--- a/form.html
+++ b/form.html
@@ -1,334 +1,226 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Create Work Order</title>
+  <meta charset="UTF-8">
+  <title>Create Work Order</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<script src="https://unpkg.com/html5-qrcode"></script>
-
-<style>
-body{
-  font-family: Arial, sans-serif;
-  background:#f4f6f8;
-  margin:0;
-  padding:20px;
-}
-.top-nav{
-  display:flex;
-  align-items:center;
-  gap:12px;
-  background:#1f3c88;
-  color:#fff;
-  padding:12px 20px;
-  border-radius:10px;
-  margin-bottom:20px;
-}
-.top-nav button{
-  background:#fff;
-  color:#1f3c88;
-  border:none;
-  padding:6px 12px;
-  border-radius:6px;
-  font-weight:bold;
-}
-.card{
-  max-width:520px;
-  background:#fff;
-  padding:24px;
-  border-radius:12px;
-  margin:auto;
-}
-label{
-  font-weight:bold;
-  margin-top:12px;
-  display:block;
-}
-input, textarea, select{
-  width:100%;
-  padding:10px;
-  margin-top:6px;
-  border-radius:6px;
-  border:1px solid #ccc;
-}
-.submit-btn{
-  margin-top:20px;
-  width:100%;
-  padding:12px;
-  background:#1f3c88;
-  color:#fff;
-  border:none;
-  border-radius:8px;
-  font-size:16px;
-  font-weight:bold;
-}
-.submit-btn:disabled{
-  background:#999;
-}
-.photo-btn{
-  margin-top:8px;
-  width:100%;
-  padding:10px;
-  background:#4caf50;
-  color:#fff;
-  border:none;
-  border-radius:6px;
-  font-weight:bold;
-}
-
-/* ===== รูปหน้างาน (Preview) ===== */
-#preview img{
-  width:100%;
-  max-height:300px;
-  object-fit:contain;
-  border-radius:8px;
-  margin-top:10px;
-}
-
-#qr-reader{
-  display:none;
-  margin-top:10px;
-}
-
-.asset-box{
-  border:1px solid #ddd;
-  padding:12px;
-  border-radius:8px;
-  margin-top:10px;
-  background:#fafafa;
-}
-
-.status-text{
-  margin-top:10px;
-  font-weight:bold;
-}
-</style>
+  <style>
+    body{
+      font-family: Arial, sans-serif;
+      background:#f5f6f8;
+      margin:0;
+      padding:0;
+    }
+    header{
+      background:#1f3c88;
+      color:#fff;
+      padding:16px;
+      font-size:20px;
+      display:flex;
+      align-items:center;
+      gap:12px;
+    }
+    header button{
+      background:#fff;
+      border:none;
+      padding:6px 12px;
+      border-radius:6px;
+      cursor:pointer;
+    }
+    .container{
+      max-width:720px;
+      margin:20px auto;
+      background:#fff;
+      border-radius:12px;
+      padding:20px;
+    }
+    label{
+      font-weight:bold;
+      display:block;
+      margin-top:16px;
+    }
+    select, textarea, input{
+      width:100%;
+      padding:10px;
+      margin-top:6px;
+      border-radius:8px;
+      border:1px solid #ccc;
+      font-size:16px;
+    }
+    textarea{
+      min-height:80px;
+    }
+    .asset-box{
+      margin-top:12px;
+      padding:14px;
+      background:#fafafa;
+      border:1px solid #ddd;
+      border-radius:10px;
+      line-height:1.6;
+    }
+    .submit-btn{
+      margin-top:24px;
+      width:100%;
+      padding:14px;
+      font-size:18px;
+      background:#1f3c88;
+      color:#fff;
+      border:none;
+      border-radius:10px;
+      cursor:pointer;
+    }
+    .submit-btn:disabled{
+      background:#999;
+      cursor:not-allowed;
+    }
+  </style>
 </head>
 
 <body>
 
-<div class="top-nav">
-  <button onclick="goHome()">⬅ Home</button>
-  <b>Create Work Order</b>
-</div>
+<header>
+  <button onclick="location.href='index.html'">← Home</button>
+  Create Work Order
+</header>
 
-<div class="card">
+<div class="container">
 
-<label>Asset ID</label>
-<select id="asset_id"></select>
-<button type="button" onclick="openQRScanner()">📷 Scan Asset QR</button>
+  <label>Asset ID</label>
+  <select id="asset_id" onchange="loadAsset()"></select>
 
-<!-- ===== Asset Detail (NO IMAGE) ===== -->
-<div id="assetDetail" class="asset-box" style="display:none;">
-  <div><b>ชื่อเครื่อง:</b> <span id="d_name"></span></div>
-  <div><b>ประเภท:</b> <span id="d_class"></span></div>
-  <div><b>กำลังไฟ:</b> <span id="d_kw"></span> kW / <span id="d_hp"></span> HP</div>
-  <div><b>Line:</b> <span id="d_line"></span></div>
-  <div><b>Location:</b> <span id="d_location"></span></div>
-  <div><b>Status:</b> <span id="d_status"></span></div>
-  <div style="margin-top:6px;"><b>รายละเอียด:</b></div>
-  <div id="d_desc" style="white-space:pre-wrap;"></div>
-</div>
+  <div id="assetDetail" class="asset-box" style="display:none;"></div>
 
-<div id="qr-reader"></div>
-<button id="closeQR" style="display:none;" onclick="closeQR()">❌ Close Scanner</button>
+  <label>Line</label>
+  <select id="line">
+    <option>Line 1</option>
+    <option>Line 2</option>
+    <option>Line 3</option>
+    <option>Line 4</option>
+    <option>Line 5</option>
+  </select>
 
-<label>Line</label>
-<select id="line">
-  <option>Line 1</option>
-  <option>Line 2</option>
-  <option>Line 3</option>
-</select>
+  <label>Problem</label>
+  <textarea id="problem" placeholder="อธิบายอาการ / ปัญหาที่พบ"></textarea>
 
-<label>Problem</label>
-<textarea id="problem" placeholder="อธิบายอาการ / ปัญหาที่พบ"></textarea>
+  <label>Priority</label>
+  <select id="priority">
+    <option>Critical</option>
+    <option>High</option>
+    <option>Medium</option>
+    <option>Low</option>
+  </select>
 
-<label>Priority</label>
-<select id="priority">
-  <option>Critical</option>
-  <option>High</option>
-  <option>Medium</option>
-  <option>Low</option>
-</select>
+  <label>Owner</label>
+  <input id="owner" placeholder="ชื่อผู้แจ้งงาน">
 
-<label>Owner</label>
-<input id="owner"/>
+  <label>Email</label>
+  <input id="email" type="email" placeholder="example@email.com">
 
-<label>Email</label>
-<input type="email" id="email"/>
+  <label>Phone</label>
+  <input id="phone" placeholder="เบอร์โทร">
 
-<label>Phone</label>
-<input type="tel" id="phone"/>
-
-<label>Photo (หน้างานจริง, max 4)</label>
-<button type="button" class="photo-btn" onclick="takePhoto()">📸 Take Photo</button>
-<div id="photo-count">0 / 4</div>
-<input type="file" id="cameraInput" accept="image/*" capture="environment" style="display:none"/>
-<div id="preview"></div>
-
-<button id="submitBtn" class="submit-btn" onclick="submitWO()">Submit Work Order</button>
-<div id="status" class="status-text"></div>
+  <button class="submit-btn" onclick="submitWO()">Submit Work Order</button>
 
 </div>
 
 <script>
-/* ==============================
- CONFIG
-============================== */
-const API_URL =
-  "https://script.google.com/macros/s/AKfycbzRfWNIS9k7psXzY8Zi_YThivvrvEtzSx4RfV8_GeeRQQ_1yRN3DA6R6E3VDFU5xJAmHQ/exec";
+/* =========================
+   CONFIG
+========================= */
+const API_URL = "https://script.google.com/macros/s/AKfycbzRfWNIS9k7psXzY8Zi_YThivvrvEtzSx4RfV8_GeeRQQ_1yRN3DA6R6E3VDFU5xJAmHQ/exec";
 
-/* ==============================
- UTIL
-============================== */
-const el = id => document.getElementById(id);
+/* =========================
+   LOAD ASSET LIST
+========================= */
+async function loadAssets(){
+  const res = await fetch(API_URL + "?action=getAssets");
+  const data = await res.json();
 
-/* ==============================
- NAV
-============================== */
-function goHome(){
-  location.href="https://airservicepcg-ux.github.io/CMMS/";
-}
+  const sel = document.getElementById("asset_id");
+  sel.innerHTML = "<option value=''>-- Select Asset --</option>";
 
-/* ==============================
- LOAD ASSET LIST
-============================== */
-fetch(API_URL + "?mode=asset")
-.then(r => r.json())
-.then(list => {
-  const sel = el("asset_id");
-  sel.innerHTML = `<option value="">-- Select Asset --</option>`;
-  list.forEach(id=>{
-    const o=document.createElement("option");
-    o.value=id;
-    o.textContent=id;
-    sel.appendChild(o);
-  });
-});
-
-/* ==============================
- ASSET DETAIL (TEXT ONLY)
-============================== */
-async function loadAssetDetail(assetId){
-  if(!assetId){
-    el("assetDetail").style.display="none";
-    return;
-  }
-  const r = await fetch(
-    API_URL+"?mode=assetDetail&asset_id="+encodeURIComponent(assetId)
-  );
-  const a = await r.json();
-  if(a.error) return;
-
-  el("assetDetail").style.display="block";
-  el("d_name").innerText = a.asset_name || "";
-  el("d_class").innerText = a.asset_class || "";
-  el("d_kw").innerText = a.kw || "";
-  el("d_hp").innerText = a.hp || "";
-  el("d_line").innerText = a.line || "";
-  el("d_location").innerText = a.location || "";
-  el("d_status").innerText = a.status || "";
-  el("d_desc").innerText = a.description || "";
-}
-
-el("asset_id").addEventListener("change",e=>{
-  loadAssetDetail(e.target.value);
-});
-
-/* ==============================
- QR SCAN
-============================== */
-let qr;
-function openQRScanner(){
-  el("qr-reader").style.display="block";
-  el("closeQR").style.display="block";
-  qr = new Html5Qrcode("qr-reader");
-  qr.start({facingMode:"environment"},{fps:10,qrbox:250},txt=>{
-    el("asset_id").value = txt.trim();
-    loadAssetDetail(txt.trim());
-    closeQR();
+  data.forEach(a=>{
+    const opt = document.createElement("option");
+    opt.value = a;
+    opt.textContent = a;
+    sel.appendChild(opt);
   });
 }
-function closeQR(){
-  if(qr){ qr.stop().catch(()=>{}); qr=null; }
-  el("qr-reader").style.display="none";
-  el("closeQR").style.display="none";
+
+/* =========================
+   LOAD ASSET DETAIL
+========================= */
+async function loadAsset(){
+  const assetId = asset_id.value;
+  if(!assetId) return;
+
+  const res = await fetch(API_URL + "?action=getAsset&id=" + assetId);
+  const a = await res.json();
+
+  assetDetail.style.display = "block";
+  assetDetail.innerHTML = `
+    <b>ชื่อเครื่อง:</b> ${a.asset_name}<br>
+    <b>ประเภท:</b> ${a.asset_class}<br>
+    <b>กำลังไฟ:</b> ${a.kw} kW / ${a.hp} HP<br>
+    <b>Line:</b> ${a.line}<br>
+    <b>Location:</b> ${a.location}<br>
+    <b>Status:</b> ${a.status}<br>
+    <b>รายละเอียด:</b><br>${a.description || "-"}
+  `;
 }
 
-/* ==============================
- PHOTO (หน้างานจริง)
-============================== */
-let images=[];
-const maxPhotos=4;
-
-function takePhoto(){
-  if(images.length>=maxPhotos){
-    alert("ถ่ายได้สูงสุด 4 รูป");
-    return;
-  }
-  el("cameraInput").click();
-}
-
-el("cameraInput").addEventListener("change",()=>{
-  const file = el("cameraInput").files[0];
-  if(!file) return;
-
-  const r=new FileReader();
-  r.onload=()=>{
-    images.push(r.result);
-    const img=document.createElement("img");
-    img.src=r.result;
-    el("preview").appendChild(img);
-    el("photo-count").innerText = images.length+" / "+maxPhotos;
-  };
-  r.readAsDataURL(file);
-});
-
-/* ==============================
- SUBMIT
-============================== */
+/* =========================
+   SUBMIT WORK ORDER
+========================= */
 async function submitWO(){
-  if(!el("asset_id").value || !el("problem").value){
-    alert("กรุณาเลือก Asset และกรอก Problem");
-    return;
-  }
+  const btn = document.querySelector(".submit-btn");
+  btn.disabled = true;
+  btn.innerText = "Submitting...";
 
-  el("submitBtn").disabled=true;
-  el("status").innerText="⏳ กำลังส่งข้อมูล...";
-
-  const payload={
-    asset_id:el("asset_id").value,
-    line:el("line").value,
-    problem:el("problem").value,
-    priority:el("priority").value,
-    owner:el("owner").value,
-    email:el("email").value,
-    phone:el("phone").value,
-    images:images
+  const payload = {
+    asset_id: asset_id.value,
+    line: line.value,
+    problem: problem.value,
+    priority: priority.value,
+    owner: owner.value,
+    email: email.value,
+    phone: phone.value
   };
 
   try{
-    const r = await fetch(API_URL,{
-      method:"POST",
-      headers:{ "Content-Type":"application/json" },
-      body:JSON.stringify(payload)
+    const res = await fetch(API_URL, {
+      method: "POST",
+      headers:{
+        "Content-Type":"application/json"
+      },
+      body: JSON.stringify(payload)
     });
-    const d = await r.json();
 
-    if(d.status==="success"){
-      alert("✅ Created "+d.wo_id);
+    if(!res.ok){
+      throw new Error("HTTP " + res.status);
+    }
+
+    const data = await res.json();
+
+    if(data.status === "success"){
+      alert("✅ Created Work Order\n" + data.wo_id);
       location.reload();
     }else{
-      alert("❌ Error");
-      el("submitBtn").disabled=false;
-      el("status").innerText="";
+      alert("❌ GAS Error: " + (data.message || ""));
     }
+
   }catch(err){
-    alert("❌ Network / GAS Error");
-    el("submitBtn").disabled=false;
-    el("status").innerText="";
+    console.error(err);
+    alert("❌ Network / GAS Error\n" + err.message);
+  }finally{
+    btn.disabled = false;
+    btn.innerText = "Submit Work Order";
   }
 }
+
+/* INIT */
+loadAssets();
 </script>
 
 </body>
